Mon Jul 27 20:48:21 GMT 2015  Olly Betts <olly@survex.com>

	* lib/,src/commands.c,tests/csbad.out,tests/csbad.svx: Report error
	  from PROJ when coordinate conversion fails as part of the actual
	  error rather than on a separate line.

Mon Jul 27 20:07:30 GMT 2015  Olly Betts <olly@survex.com>

	* src/thgeomag.c,src/thgeomag.h: Make thgeomag() return declination in
	  radians, since that's what we want and it's more consistent with it
	  taking lat and lon in radians.

Mon Jul 27 20:04:38 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavern.h: Document what days1 and days2 members of meta_data
	  struct are.

Mon Jul 27 15:15:53 GMT 2015  Olly Betts <olly@survex.com>

	* src/: Clean up support for repeat readings (currently disabled) to
	  only expect them for survey readings.

Mon Jul 27 13:25:28 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Add example of using "*CALIBRATE DECLINATION".

Mon Jul 27 13:24:52 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Consistently say "magnetic declination" instead of
	  "magnetic deviation".

Mon Jul 27 13:05:58 GMT 2015  Olly Betts <olly@survex.com>

	* src/Makefile.am: Add thgeomag code to the build system.

Mon Jul 27 13:04:54 GMT 2015  Olly Betts <olly@survex.com>

	* src/thgeomag.c,src/thgeomag.cxx: Tweak thgeomag.cxx to be valid C
	  code.

Mon Jul 27 12:54:19 GMT 2015  Olly Betts <olly@survex.com>

	* src/thgeomag.cxx: Fix "set but not used" warning.

Mon Jul 27 12:42:47 GMT 2015  Olly Betts <olly@survex.com>

	* src/: Add IGRF handling code from therion 5.3.16.

Mon Jul 27 08:08:11 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/: Extend check for *fix before *cs to catch
	  *fix with standard deviations too.

Sun Jul 26 11:36:36 GMT 2015  Olly Betts <olly@survex.com>

	* src/printing.cc: Remove the "Coordinate projection" field from the
	  print dialog, as it isn't relevant there.

Sun Jul 26 11:21:33 GMT 2015  Olly Betts <olly@survex.com>
