@@ -222,8 +222,6 @@ speeds up cavern by about 10%.
 <li>
 Warn bearings not 3 digits, gradient not &lt;sign&gt;&lt;digit&gt;&lt;digit&gt;
 
-<li>cavern: auto declination?
-
 <li>Sort out gross error detection code
 
 <li>For warnings such as "Suspicious compass reading", report the reading
