@@ -38,6 +38,7 @@
 #include "commands.h"
 #include "out.h"
 #include "str.h"
+#include "thgeomag.h"
 
 #define EPSILON (REAL_EPSILON * 1000)
 
@@ -890,14 +891,30 @@ handle_compass(real *p_var)
    real compvar = VAR(Comp);
    real comp = VAL(Comp);
    real backcomp = VAL(BackComp);
+   real declination;
+   if (pcs->z[Q_DECLINATION] != HUGE_REAL) {
+      declination = -pcs->z[Q_DECLINATION];
+   } else {
+      double dat;
+      if (!pcs->meta || pcs->meta->days1 == -1) {
+	  /* FIXME: Must set date for autodeclination to work */
+	  declination = 0;
+      } else {
+	  /* FIXME: Calculate the Julian date properly. */
+	  dat = (pcs->meta->days1 + pcs->meta->days2) * 0.5 / 365.25 + 1900;
+	  /* thgeomag() takes (lat, lon, h, dat) - i.e. (y, x, z, date). */
+	  /* FIXME: cache the declination */
+	  declination = thgeomag(pcs->dec_y, pcs->dec_x, pcs->dec_z, dat);
+      }
+   }
    if (comp != HUGE_REAL) {
       comp = (comp - pcs->z[Q_BEARING]) * pcs->sc[Q_BEARING];
-      comp -= pcs->z[Q_DECLINATION];
+      comp += declination;
    }
    if (backcomp != HUGE_REAL) {
       backcomp = (backcomp - pcs->z[Q_BACKBEARING])
 	      * pcs->sc[Q_BACKBEARING];
-      backcomp -= pcs->z[Q_DECLINATION];
+      backcomp += declination;
       backcomp -= M_PI;
       if (comp != HUGE_REAL) {
 	 real diff = comp - backcomp;
